--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
 </head>
 <body style="background-color: black;">
     <h1 style="color: purple">Hello all</h1>
+    <div style="color: white">Lets try uploading a commit through Jenkins</div>
 </body>
 </html>
