--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
 </head>
 <body style="background-color: black;">
     <h1 style="color: purple">Hello all</h1>
-    <div style="color: white">Lets try uploading a commit through Jenkins</div>
+    <div style="color: yellow">Lets try uploading a commit through Jenkins. Lets see how it goes.
+        Fingers crossed
+    </div>
 </body>
 </html>
