--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <h1 style="color: purple">Hello all</h1>
     <div style="color: yellow">Lets try uploading a commit through Jenkins. Lets see how it goes.
         Fingers crossed
+        <button onClick="document.location='https://www.google.com'">Home</button>
     </div>
 </body>
 </html>
